# lifetracking

./: .gitignore  .pre-commit-config.yaml  README.md  TO-DO.md  pyproject.toml
.github/workflows/: python-package.yml  quality-check.yml
lifetracking/: Node_activitywatch.py  Node_anki.py  Node_bluetoothbeacons.py  Node_browser_history.py  Node_files_audios.py  Node_files_videos.py  Node_social.py  Node_videos.py  Node_weather.py  __init__.py  utils.py
lifetracking/dataloggers/: segment.py  single.py  systemdetails.py
lifetracking/datatypes/: Seg.py  Segment.py  Segments.py
lifetracking/graph/: Node.py  Node_cache.py  Node_dicts.py  Node_geopandas.py  Node_int.py  Node_pandas.py  Node_segments.py  Time_interval.py  quantity.py  warnings.py
lifetracking/plots/: ascii.py  circular_graph.py  graphs.py
src/lifetracking_overhaul/: __init__.py
src/lifetracking_overhaul/core/: node.py  timeinterval.py
tests/: test_datatype_seg.py  test_datatype_segment.py  test_datatype_segments.py  test_node.py  test_node_availability.py  test_node_cache.py  test_node_datasource_anki.py  test_node_datasource_audios.py  test_node_datasource_aw.py  test_node_datasource_videos.py  test_node_datasource_weather.py  test_node_int.py  test_node_pddataframe.py  test_node_segment.py  test_node_segments.py  test_node_type_dataframe.py  test_node_type_dict.py  test_node_type_geopandas.py  test_node_type_int.py  test_node_type_segments.py  test_nodeint.py  test_plots.py  test_timeintervals.py  test_utils.py
tools/: jsonc_check.py  update_version.py
