[tool.poetry]
name = "lifetracking"
version = "0.4.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
rich = ">=13.3.5"
pandas = ">=2.0.1"
prefect = ">=2.13.8"
browser-history = ">=0.3.2"
requests = "^2.31.0"
ankipandas = "^0.3.14"
geopandas = "^0.13.0"
contextily = "^1.3.0"
ffmpeg-python = "^0.2.0"
meteostat = "^1.6.5"
pydub = "^0.25.1"
plotly = "^5.15.0"
ipywidgets = "^8.0.6"
ipykernel = "^6.23.1"
pillow = "^10.0.0"
freezegun = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^3.3.0"
pytest-sugar = ">=1.0.0"
black = ">=24.4.2"
pre-commit = ">=3.7.1"
tomlkit = "^0.11.8"
json5 = "^0.9.11"
coverage = "^7.2.5"
hypothesis = "^6.75.3"
ruff = ">=0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# I actually kind of like this list:
# https://github.com/astral-sh/ruff/discussions/8161
select = [
    "A",    #  flake8-builtins
    "B",
    "C4",
    "E",
    "EM",
    "F",
    "FA",
    "I",
    "NPY",  #  NumPy-specific rules
    "PIE",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TID",  #  flake8-tidy-imports
    "TRY",
    "UP",
    "YTT",
    "ISC",  #  flake8-implicit-str-concat
    "PERF",
    # "ARG",
    # "N",
    "FURB",

    # To consider:
    # "PD", #  pandas-vet, add it in the future
    # "SLF", #  flake8-self
    # "ERA", # (when the project is more mature)
    # "DTZ", #  flake8-datetimez
    # "PGH", #  pygrep-hooks
    # "PL", #  Pylint

    # "D",
    # "D4",
    # "D107", # Make a branch 'docs' and add inits at elast
]
extend-ignore = ["B008"]

[tool.isort]
profile = "black"

[tool.pyright]
exclude = [
    ".github/**",
    ".hypothesis/**",
    ".ipynb_checkpoints/**",
    ".mypy_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".tox/**",
    ".venv/**",
    ".vscode/**",
    "docs/**",
    "sketches/**",
    "tmp/**",
    "tools/**",
    "tools/**",
]
