[project]
name = "lifetracking-overhaul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "egeres", email = "egeres.default@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "polars>=1.40.1",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.scripts]
lifetracking-overhaul = "lifetracking_overhaul:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.ty.src]
include = ["src", "tools", "tests"]

[tool.ruff]
include = ["src/**/*.py"]
lint.select = [
    "A",    #  flake8-builtins
    "ARG",
    "B",
    "C4",
    "DTZ",  #  flake8-datetimez
    "E",
    "EM",   # Error messages
    "F",
    "FA",   # Future annotations (__future__ import annotations)
    "FAST", # Fast API
    "FLY",
    "FURB",
    "I",
    "INT",
    "ISC",  #  flake8-implicit-str-concat
    "N",
    "NPY",  #  NumPy-specific rules
    "PD",   #  pandas-vet, add it in the future
    "PERF",
    "PIE",
    "PLC",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",  #  flake8-self
    "TC",   #  Type checking block
    "TID",  #  flake8-tidy-imports
    "TRY",
    "UP",   # Pyupgrade
    "YTT",

    # To consider:
    # "ERA", # (when the project is more mature)
    # "PGH", #  pygrep-hooks
    # "PL", #  Pylint
    # "PLW",
    # "D",
    # "D4",
    # "D107", # Make a branch 'docs' and add inits at least
]
lint.ignore = [
    # "PD901", # Avoid using the generic variable name `df` for DataFrames
    "A004", # Override things like `print` (I'm using rich!)

    # Disabled because sometimes I add imports in functions for dynamism
    "PLC0415", # `import` should be at the top-level of a file.

    # Maybe in the future they will change this, but the following collide with fmt off
    "E241", # Multiple spaces after comma
    "E203", # Whitespace before ','

    "B905", # zip() requires strict argument, kinda annoying IMO
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
